force-app/main/default/objects/SVMXA360__ServiceRequest__c/SVMXA360__ServiceRequest__c.object-meta.xml
<CustomObject>
    <description>This object holds alerts, service request or any form of actionable request from external systems.</description>
    <label>Service Request</label>
    <nameField>
        <displayFormat>SR-{00000000}</displayFormat>
        <label>Service Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>