force-app/main/default/objects/SVMXA360__ServiceRequest__c/fields/SVMXA360__AccountId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account Name</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>