force-app/main/default/objects/SVMXA360__ServiceRequest__c/fields/SVMXA360__ClosedBy__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ClosedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User closing the request</description>
    <label>Closed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>