force-app/main/default/objects/SVMXA360__ServiceRequest__c/fields/SVMXA360__ClosedOn__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ClosedOn__c</fullName>
    <description>Request close date time</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Closed On</label>
    <type>DateTime</type>
</CustomField>