force-app/main/default/objects/SVMXA360__ServiceRequest__c/fields/SVMXA360__Description__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Description__c</fullName>
    <description>Details of the request</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>