force-app/main/default/objects/SVMXA360__ServiceRequest__c/fields/SVMXA360__EventTime__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__EventTime__c</fullName>
    <description>Event occurrence timestamp</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Event Time</label>
    <type>DateTime</type>
</CustomField>