force-app/main/default/objects/SVMXA360__ServiceRequest__c/fields/SVMXA360__Payload__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Payload__c</fullName>
    <description>Holds all information about the properties or attributes that are part of the request or holds the request payload that needs further processing based on type of request</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Payload</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>