force-app/main/default/objects/SVMXA360__ServiceRequest__c/fields/SVMXA360__Priority__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Priority__c</fullName>
    <description>Priority of the request</description>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <default>true</default>
                <label>Low</label>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>