force-app/main/default/objects/SVMXA360__ServiceRequest__c/fields/SVMXA360__Subject__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Subject__c</fullName>
    <description>Summary of the request</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Subject</label>
    <type>TextArea</type>
</CustomField>