force-app/main/default/objects/SVMXA360__ServiceRequest__c/fields/SVMXA360__Type__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Type__c</fullName>
    <description>Type of the request</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alert</fullName>
            </value>
            <value>
                <fullName>IoT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>